fixing clicking of navigation links on small screen with z-index

--- a/style.css
+++ b/style.css
@@ -834,6 +834,8 @@ nav .nav-content-wrapp .nav-list li a {
     /* color: rgba(255, 255, 255, 0); */
     font-family: Helvetica, Arial, sans-serif;
     text-decoration: none;
+    position: relative;
+    z-index: 1001;
 }
 
 /* OLD NAVIGATION HOVER ANIMATION */
